--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <% if user_signed_in? %>
+  <li><%=current_user.email%></li>
   <li>
   <%= link_to('Edit registration', edit_user_registration_path) %>
   </li>
@@ -17,14 +18,23 @@
   </li>
 <% end %>
 <% if user_signed_in? %>
+
   <li>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+  </li>
+  <li>
+    <%= link_to('Grupos', grupos_path) %>
+  </li>
+  <li>
+    <%= link_to('Hotel', hotels_path) %>
   </li>
 <% else %>
   <li>
   <%= link_to('Login', new_user_session_path)  %>
   </li>
-<% end %>
+  <% end %>
+
+
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
