--- a/app/views/contatos/show.html.erb
+++ b/app/views/contatos/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>User:</strong>
+  <%= @contato.user_id %>
+</p>
+
+<p>
   <strong>Nome:</strong>
   <%= @contato.nome %>
 </p>
