--- a/app/views/contatos/_form.html.erb
+++ b/app/views/contatos/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :user_id %><br>
+    <%= f.number_field :user_id %>
+  </div>
+  <div class="field">
     <%= f.label :nome %><br>
     <%= f.text_field :nome %>
   </div>
@@ -29,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label :obs %><br>
-    <%= f.text_field :obs %>
+    <%= f.text_area :obs %>
   </div>
   <div class="actions">
     <%= f.submit %>
