--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
     <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
   </li>
   <li>
+    <%= link_to('Contatos', contatos_path) %>
+  </li>
+  <li>
     <%= link_to('Grupos', grupos_path) %>
   </li>
   <li>
