--- a/app/views/hotels/index.html.erb
+++ b/app/views/hotels/index.html.erb
@@ -18,10 +18,34 @@
         <td><%= link_to 'Edit', edit_hotel_path(hotel) %></td>
         <td><%= link_to 'Destroy', hotel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
-
+      <% end %>
   </tbody>
 </table>
+
+
+
+<h1>Listing Hotels (shares with you)</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @hotels_shares.each do |hotel| %>
+      <tr>
+        <td><%= hotel.name %></td>
+        <td><%= link_to 'Show', hotel %></td>
+        <td><%= link_to 'Edit', edit_hotel_path(hotel) %></td>
+        <td><%= link_to 'Destroy', hotel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+      <% end %>
+  </tbody>
+</table>
+
 
 <br>
 
