--- a/app/views/contatos/_form.html.erb
+++ b/app/views/contatos/_form.html.erb
@@ -11,10 +11,8 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+
+  <%= f.hidden_field :user_id %>
   <div class="field">
     <%= f.label :nome %><br>
     <%= f.text_field :nome %>
