--- a/app/views/grupos/_form.html.erb
+++ b/app/views/grupos/_form.html.erb
@@ -20,10 +20,10 @@
 <label for="grupos">Contatos:</label>
 
 
-   <% Contato.all.each do |contato| %>
+   <% Contato.where(user_id: current_user).find_each do |contato| %>
                       <%= check_box_tag "grupo[contato_ids][]", contato.id, @grupo.contatos.include?(contato) %>
                       <%= contato.nome %>
-                   <% end %>
+   <% end %>
 
   <div class="actions">
     <%= f.submit %>
