--- a/app/views/grupos/index.html.erb
+++ b/app/views/grupos/index.html.erb
@@ -25,3 +25,24 @@
 <br>
 
 <%= link_to 'New Grupo', new_grupo_path %>
+<h1>Lista de grupos (Shares)</h1>
+
+
+<table>
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @grupos_shares.each do |t| %>
+      <tr>
+        <td><%= t.nome %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
