grupos radio button

--- a/app/views/hotels/_form.html.erb
+++ b/app/views/hotels/_form.html.erb
@@ -44,13 +44,10 @@
 
 
     <div class="field">
-      <%= builder.label :enable, grupo.nome %>
       <%= builder.check_box :enable %>
-    </div>
-
-    <div class="field">
-      <%= builder.label :tipo %><br />
-      <%= builder.text_field :tipo %>
+      <%= builder.label :enable, grupo.nome %>
+      <%= builder.radio_button :tipo, '1' %> Leitura
+      <%= builder.radio_button :tipo, '2' %> Escrita
     </div>
   <% end %>
 
